# linenoise-ng

./: CMakeLists.txt
src/: linenoise.cpp
